# rdf4cpp

./: .clang-format  .clang-tidy  .gitignore  .readthedocs.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  conanfile.py  delete_me_later_please.cpp  mkdocs.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ctest.cmake  detect-pobr-diff.yml  main_test_and_example.yml  publish-conan-branch-package.yml  publish-release.yml  reusable_fetch_content.yml  reusable_packaging_and_deployment.yml  reusable_run_test_and_examples.yml  reusable_run_test_and_examples_by_linking_type.yml  reusable_test_and_example.yml  reusable_test_and_example_config.yml  reusable_testing.yml  run_test_and_examples.yml  run_test_for_coverage.yml  test.yml  test_packaging_and_deployment.yml  tests_and_examples.yml
cmake/: boilerplate_init.cmake  conan_cmake.cmake  install_library.cmake  version.hpp.in
docs/: requirements.txt
docs/source/: NodeBackendHandle.rst  conf.py  datatype_registry.rst  examples.rst  getting_started.rst  index.rst  node_storage.rst  storage.rst  t_NodeBackendHandle.rst  (+6 more)
examples/: CMakeLists.txt  RDFFileParser_example.cpp  RDFFileParser_simple.ttl  blank_node_management.cpp  getting_started.cpp  graphs_and_datasets.cpp  literal_datatypes.cpp  namespaces.cpp  namespaces_example.cpp  rdf_format_checker.cpp  rdf_nodes.cpp  recurring_partial_date_datatypes.cpp
packaging/: CMakeLists.txt  rdf4cppConfig.cmake
src/: rdf4cpp.hpp
src/rdf4cpp/rdf/datatypes/: CMakeLists.txt  DatatypeRegistry.hpp  LiteralDatatype.hpp  owl.hpp  rdf.hpp  xsd.hpp
src/rdf4cpp/rdf/datatypes/owl/: Rational.cpp  Rational.hpp  Real.cpp  Real.hpp
src/rdf4cpp/rdf/datatypes/rdf/: LangString.cpp  LangString.hpp
src/rdf4cpp/rdf/datatypes/registry/: ConstexprString.hpp  DatatypeConversion.hpp  DatatypeConversionTyping.hpp  DatatypeID.hpp  DatatypeIRI.hpp  DatatypeMapping.hpp  DatatypeRegistry.cpp  DatatypeRegistry.hpp  FixedIdMappings.hpp  LiteralDatatypeImpl.hpp  README.md  Util.hpp
src/rdf4cpp/rdf/datatypes/registry/util/: CharConvExt.hpp  ConstexprString.hpp  DateTimeUtils.hpp  Inlining.hpp  LangTag.hpp  StaticFlatMap.hpp  Tuple.hpp  TypeList.hpp
src/rdf4cpp/rdf/datatypes/xsd/: AnyURI.hpp  Base64Binary.cpp  Base64Binary.hpp  Boolean.cpp  Boolean.hpp  Byte.hpp  Date.hpp  DateTime.hpp  DateTimeStamp.hpp  DayTimeDuration.hpp  Decimal.cpp  Decimal.hpp  Double.cpp  Double.hpp  Duration.hpp  Float.cpp  Float.hpp  GDay.hpp  GMonth.hpp  GMonthDay.hpp  GYear.hpp  GYearMonth.hpp  HexBinary.cpp  HexBinary.hpp  Int.hpp  Integer.hpp  Language.hpp  Long.hpp  NCName.hpp  NMTOKEN.hpp  Name.hpp  NegativeInteger.hpp  NonNegativeInteger.hpp  NonPositiveInteger.hpp  NormalizedString.hpp  PositiveInteger.hpp  README.md  Short.hpp  String.cpp  String.hpp  (+7 more)
src/rdf4cpp/rdf/datatypes/xsd/integers/non_negative/: NonNegativeInteger.cpp  NonNegativeInteger.hpp  PositiveInteger.cpp  PositiveInteger.hpp  UnsignedByte.cpp  UnsignedByte.hpp  UnsignedInt.cpp  UnsignedInt.hpp  UnsignedLong.cpp  UnsignedLong.hpp  UnsignedShort.cpp  UnsignedShort.hpp
src/rdf4cpp/rdf/datatypes/xsd/integers/non_positive/: NegativeInteger.cpp  NegativeInteger.hpp  NonPositiveInteger.cpp  NonPositiveInteger.hpp
src/rdf4cpp/rdf/datatypes/xsd/integers/signed/: Byte.cpp  Byte.hpp  Int.cpp  Int.hpp  Integer.cpp  Integer.hpp  Long.cpp  Long.hpp  Short.cpp  Short.hpp
src/rdf4cpp/rdf/datatypes/xsd/time/: Date.cpp  Date.hpp  DateTime.cpp  DateTime.hpp  DateTimeStamp.cpp  DateTimeStamp.hpp  Day.cpp  Day.hpp  DayTimeDuration.cpp  DayTimeDuration.hpp  Duration.cpp  Duration.hpp  Month.cpp  Month.hpp  MonthDay.cpp  MonthDay.hpp  Time.cpp  Time.hpp  Timezone.hpp  Year.cpp  Year.hpp  YearMonth.cpp  YearMonth.hpp  YearMonthDuration.cpp  YearMonthDuration.hpp  day.cpp  day.hpp  month.cpp  month.hpp  year.cpp  year.hpp
test_FetchContent/: CMakeLists.txt
test_FetchContent/src/: test_FetchContent.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  bench_SerDe.cpp
tests/datatype/: tests_AnyURI.cpp  tests_Base64Binary.cpp  tests_Boolean.cpp  tests_Byte.cpp  tests_Date.cpp  tests_DateTime.cpp  tests_DateTimeStamp.cpp  tests_DayTimeDuration.cpp  tests_Decimal.cpp  tests_Double.cpp  tests_Duration.cpp  tests_Float.cpp  tests_GDay.cpp  tests_GMonth.cpp  tests_GMonthDay.cpp  tests_GYear.cpp  tests_GYearMonth.cpp  tests_HexBinary.cpp  tests_Int.cpp  tests_Integer.cpp  tests_LangString.cpp  tests_Language.cpp  tests_Long.cpp  tests_NCName.cpp  tests_NMTOKEN.cpp  tests_Name.cpp  tests_NegativeInteger.cpp  tests_NonNegativeInteger.cpp  tests_NonPositiveInteger.cpp  tests_NormalizedString.cpp  tests_NumOpResults.cpp  tests_PositiveInteger.cpp  tests_Short.cpp  tests_String.cpp  tests_Time.cpp  tests_Token.cpp  tests_UnsignedByte.cpp  tests_UnsignedInt.cpp  tests_UnsignedLong.cpp  tests_UnsignedShort.cpp  (+3 more)
tests/datatypes_test/: basicdt_test.cpp
tests/graph/: tests_dataset.cpp  tests_dataset_backend.cpp
tests/hello_test/: main.cpp
tests/namespaces/: tests_Namespace.cpp  tests_Namespace_life_cycle.cpp
tests/nodes/: tests_DBpediaMode.cpp  tests_IRIFactory.cpp  tests_Literal.cpp  tests_Literal_ops.cpp  tests_Node.cpp  tests_NodeStorage_helper_types.cpp  tests_NodeStorage_lifetime.cpp  tests_NodeStorage_specialization.cpp  tests_Node_comparison.cpp
tests/others_test/: literal_test.cpp
tests/parser/: bench_RDFFileParser.cpp  tests_IStreamQuadIterator.cpp  tests_RDFFileParser.cpp  tests_RDFFileParser_simple.ttl
tests/query/: tests_QuadPattern.cpp  tests_TriplePattern.cpp  tests_Variable.cpp
tests/query_test/: qpattern.cpp  qpattern_test.cpp  tpattern.cpp  tpattern_test.cpp  variable_test.cpp
tests/serializer/: tests_Serialization.cpp  tests_Serialize.cpp
tests/util/: BlankNodeIdManagement_metall_common.hpp  BlankNodeIdManagement_metall_phase1.cpp  BlankNodeIdManagement_metall_phase2.cpp  tests_BigDecimal.cpp  tests_BlankNodeIdManagement.cpp  tests_BlankNodeIdManagement_metall.cpp  tests_CowString.cpp  tests_Inlining.cpp  tests_Regex.cpp  tests_TriBool.cpp
(+659 files in other folders)
